# Jit

./: .gitignore  AI-Report.md  CMakeLists.txt  DMA.md  README.md  add.c  add.h  branch.c  branch.h  check_branch.c  check_branch.h  commit.c  commit.h  delete_branch.c  delete_branch.h  init.c  init.h  log.c  log.h  main.c  reset.c  reset.h  restore.c  restore.h  status.c  status.h  switch_branch.c  switch_branch.h  unstage.c  unstage.h
